// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator tsed {
  provider = "tsed-prisma"
  output   = "../prisma/generated/tsed"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

model User {
  id         Int          @id @default(autoincrement())
  updatedAt  DateTime     @default(now()) @updatedAt
  createdAt  DateTime     @default(now())
  // ------
  email      String       @unique
  firstName  String
  lastName   String
  password   String
  height     Float?
  weight     Float?
  bloodType  String?
  Activity   Activity[]
  Sleep      Sleep[]
  Medication Medication[]
}

enum ActivityType {
  WALKING
  RUNNING
  CYCLING
  SWIMMING
  YOGA
  OTHER
}

model Activity {
  id           Int          @id @default(autoincrement())
  updatedAt    DateTime     @default(now()) @updatedAt
  createdAt    DateTime     @default(now())
  // ------
  type         String // defined in enum
  startAt      DateTime
  duration     Int
  activityType ActivityType @default(OTHER)
  user         User         @relation(fields: [userId], references: [id])
  userId       Int
}

model Sleep {
  id        Int      @id @default(autoincrement())
  updatedAt DateTime @default(now()) @updatedAt
  createdAt DateTime @default(now())
  // ------
  duration  Int
  strat     DateTime
  end       DateTime
  user      User     @relation(fields: [userId], references: [id])
  userId    Int
}

model Medication {
  id          Int      @id @default(autoincrement())
  updatedAt   DateTime @default(now()) @updatedAt
  createdAt   DateTime @default(now())
  // ------
  name        String
  description String
  status      Int // Active: 1, Inactive: 0

  user          User            @relation(fields: [userId], references: [id])
  userId        Int
  MedicationLog MedicationLog[]
}

model MedicationLog {
  id        Int      @id @default(autoincrement())
  updatedAt DateTime @default(now()) @updatedAt
  createdAt DateTime @default(now())
  // ------
  date      DateTime
  status    Int // Taken: 1, Not taken: 0

  medication   Medication @relation(fields: [medicationId], references: [id])
  medicationId Int
}
