//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id Int [pk, increment]
  updatedAt DateTime [default: `now()`, not null]
  createdAt DateTime [default: `now()`, not null]
  email String [unique, not null]
  firstName String [not null]
  lastName String [not null]
  password String [not null]
  height Float
  weight Float
  bloodType String
  Activity Activity [not null]
  Sleep Sleep [not null]
  Medication Medication [not null]
}

Table Activity {
  id Int [pk, increment]
  updatedAt DateTime [default: `now()`, not null]
  createdAt DateTime [default: `now()`, not null]
  type String [not null]
  startAt DateTime [not null]
  duration Int [not null]
  activityType ActivityType [not null, default: 'OTHER']
  user User [not null]
  userId Int [not null]
}

Table Sleep {
  id Int [pk, increment]
  updatedAt DateTime [default: `now()`, not null]
  createdAt DateTime [default: `now()`, not null]
  duration Int [not null]
  strat DateTime [not null]
  end DateTime [not null]
  user User [not null]
  userId Int [not null]
}

Table Medication {
  id Int [pk, increment]
  updatedAt DateTime [default: `now()`, not null]
  createdAt DateTime [default: `now()`, not null]
  name String [not null]
  description String [not null]
  status Int [not null]
  user User [not null]
  userId Int [not null]
  MedicationLog MedicationLog [not null]
}

Table MedicationLog {
  id Int [pk, increment]
  updatedAt DateTime [default: `now()`, not null]
  createdAt DateTime [default: `now()`, not null]
  date DateTime [not null]
  status Int [not null]
  medication Medication [not null]
  medicationId Int [not null]
}

Enum ActivityType {
  WALKING
  RUNNING
  CYCLING
  SWIMMING
  YOGA
  OTHER
}

Ref: Activity.userId > User.id

Ref: Sleep.userId > User.id

Ref: Medication.userId > User.id

Ref: MedicationLog.medicationId > Medication.id